--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@ header{
     display: flex;
     justify-content: space-around;
 }
+header ul{
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
+}
+main {
+    background-color: orangered;
+    display: flex;
+    justify-content: space-around;
+}
