--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header ul{
     justify-content: space-around;
     align-items: center;
     width: 60%;
+    padding: 20px;
 }
 main {
     background-color: orangered;
